--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -2,6 +2,9 @@
     "common":{
         "nickName": "Biệt danh",
         "submit": "Xác nhận",
-        "homeScreen": "Trang chủ"
+        "homeScreen": "Trang chủ",
+        "exit": "Thoát",
+        "saySomething": "Hãy nói điều gì đó",
+        "comingSoon": "Công trình đang thi công"
     }
 }
