--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,6 +2,9 @@
     "common":{
         "nickName": "Nickname",
         "submit": "Submit",
-        "homeScreen": "Home screen"
+        "homeScreen": "Home screen",
+        "exit": "Exit",
+        "saySomething": "Say something",
+        "comingSoon": "Something is coming soon"
     }
 }
