--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,10 +1,16 @@
 {
-    "common":{
+    "common": {
         "nickName": "Nickname",
         "submit": "Submit",
         "homeScreen": "Home screen",
         "exit": "Exit",
         "saySomething": "Say something",
-        "comingSoon": "Something is coming soon"
+        "comingSoon": "Something is coming soon",
+        "gameMenu": "Game menu",
+        "unknown": "Unknow"
+    },
+    "game": {
+        "caro": "Caro",
+        "threeCard": "ThreeCard"
     }
 }
