Update UI NotFound screen

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -12,5 +12,8 @@
     "game": {
         "caro": "Caro",
         "threeCard": "ThreeCard"
+    },
+    "errorMessage": {
+        "notFound": "404"
     }
 }
