--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -12,5 +12,8 @@
     "game": {
         "caro": "Caro",
         "threeCard": "Bài cào"
+    },
+    "errorMessage": {
+        "notFound": "404"
     }
 }
