--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -1,5 +1,5 @@
 {
-    "common":{
+    "common": {
         "nickName": "Biệt danh",
         "submit": "Xác nhận",
         "homeScreen": "Trang chủ",
@@ -8,7 +8,9 @@
         "comingSoon": "Công trình đang thi công",
         "gameMenu": "Danh sách game",
         "unknown": "Không xác định",
-        "back": "Quay lại"
+        "back": "Quay lại",
+        "congratulation": "Chúc mừng",
+        "confirmDialog": "Thông báo"
     },
     "game": {
         "caro": "Caro",
@@ -17,7 +19,14 @@
     "errorMessage": {
         "notFound": "404"
     },
-    "roomListingScreen":{
+    "roomListingScreen": {
         "title": "Danh sách phòng"
+    },
+    "caroScreen": {
+        "title": "Caro game",
+        "yourColor": "Màu của bạn",
+        "opponentColor": "Màu của đối phương",
+        "host": "Chủ phòng",
+        "winnerDescription": "Người thắng cuộc là"
     }
 }
