Improvement UX caro

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -10,7 +10,8 @@
         "unknown": "Unknow",
         "back": "Back",
         "congratulation": "Congratulation",
-        "confirmDialog": "Confirm dialog"
+        "confirmDialog": "Confirm dialog",
+        "pleaseWaitAnotherPlayer": "Please wait another player..."
     },
     "game": {
         "caro": "Caro",
