--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -10,7 +10,8 @@
         "unknown": "Không xác định",
         "back": "Quay lại",
         "congratulation": "Chúc mừng",
-        "confirmDialog": "Thông báo"
+        "confirmDialog": "Thông báo",
+        "pleaseWaitAnotherPlayer": "Vui lòng chờ người chơi khác..."
     },
     "game": {
         "caro": "Caro",
