--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -11,7 +11,9 @@
         "back": "Back",
         "congratulation": "Congratulation",
         "confirmDialog": "Confirm dialog",
-        "pleaseWaitAnotherPlayer": "Please wait another player..."
+        "pleaseWaitAnotherPlayer": "Please wait another player...",
+        "newGame": "New game",
+        "quitGame": "Quit game"
     },
     "game": {
         "caro": "Caro",
